fix: Fixed execution semantics
Signed-off-by: dhoard <doug.hoard@gmail.com>